--- a/kz/index.html
+++ b/kz/index.html
@@ -2326,7 +2326,7 @@
                                     </tr>
                                 </table>
                             </span>
-                            <a href="files/pdf-правила.docx" target="" class="t-btn t142A__marginleft20px" style="color:#60b6cc;border:2px solid #60b6cc;">
+                            <a href="files/pdf.docx" target="" class="t-btn t142A__marginleft20px" style="color:#60b6cc;border:2px solid #60b6cc;">
                                 <table style="width:100%; height:100%;">
                                     <tr>
                                         <td>Правила розыгрыша путевки</td>
