--- a/kz/index.html
+++ b/kz/index.html
@@ -134,7 +134,9 @@ box-shadow: inset 0px -1px 0px 0px #60b6cc;
 });</script><!-- /T396 --></div><div id="rec160705296" class="r t-rec t-rec_pt_105 t-rec_pb_75" style="padding-top:105px;padding-bottom:75px;background-color:#f7f7f7; " data-animationappear="off" data-record-type="850" data-bg-color="#f7f7f7"><!-- t850 --><div class="t850"><div class="t-section__container t-container"><div class="t-col t-col_12"><div class="t-section__topwrapper t-align_left"><div class="t-section__title t-title t-title_xs" field="btitle"><div style="font-size:52px;color:#60b6cc;" data-customstyle="yes">— <span style="font-weight: 700;">Біздің емханаларымыз</span></div></div><div class="t-section__descr t-descr t-descr_xl" field="bdescr"><div style="font-size:20px;" data-customstyle="yes"></div></div></div></div></div><div class="t-container""><div class="t850__row" > <div class="t850__col t-col t-col_4 t-align_left"> <a href="https://astanavision.com/" target=""> <div class="t850__inner-col" style="background-color:#ffffff; border-radius:5px; box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.10);"> <div class="t850__wrap"> <div class="t-name t-name_lg t850__bottommargin" style="" field="li_title__1531225385233" ><div style="color:#000000;" data-customstyle="yes"><span style="font-weight: 600;">НҰР-СҰЛТАН</span><br /></div></div> <div class="t-descr t-descr_sm" style="" field="li_descr__1531225385233" >Адрес:<br />ул.Омарова, 10.( ЖК Медео)<br /><br /><br />Телефон:<br /><a href="tel:+77172563636" style="color: rgb(123, 195, 96); font-size: 16px;"><span style="font-size: 18px;"><span data-redactor-style="color: rgb(27, 162, 189);" style="color: rgb(27, 162, 189);">+7 (7172) 56-36-36</span></span></a><br /><br />E-mail:<br />info@astanavision.com</div> <div class="t850__btn-container t850__btn-container_topmargin"> <div class="t850__btntext-wrapper"> <div class="t850__btn-text t-btntext t-btntext_sm " style="color:#1ba2bd;font-family:Open Sans;font-weight:500;">Веб-сайтқа өту</div> </div> </div> </div> </div> </a></div><div class="t850__col t-col t-col_4 t-align_left"> <a href="https://almatyvision.kz/laser-correction/" target=""> <div class="t850__inner-col" style="background-color:#ffffff; border-radius:5px; box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.10);"> <div class="t850__wrap"> <div class="t-name t-name_lg t850__bottommargin" style="" field="li_title__1531225399444" >АЛМАТЫ</div> <div class="t-descr t-descr_sm" style="" field="li_descr__1531225399444" >Адрес:<br />ул. Жамакаева 254В, в здании института хирургии Mediterra<br /><br />Телефон:<br /><a href="tel:+77273469952" style="color: rgb(123, 195, 96); font-size: 16px;"><span style="color: rgb(27, 162, 189);"><span data-redactor-style="font-size: 18px;" style="font-size: 18px;">+7 (727) 346-99-52</span></span></a><br /><br />E-mail:<br />info@almatyvision.kz</div> <div class="t850__btn-container t850__btn-container_topmargin"> <div class="t850__btntext-wrapper"> <div class="t850__btn-text t-btntext t-btntext_sm " style="color:#1ba2bd;font-family:Open Sans;font-weight:500;">Веб-сайтқа өту</div> </div> </div> </div> </div> </a></div><div class="t850__col t-col t-col_4 t-align_left"> <a href="https://prozrenie.kz/ru/" target=""> <div class="t850__inner-col" style="background-color:#ffffff; border-radius:5px; box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.10);"> <div class="t850__wrap"> <div class="t-name t-name_lg t850__bottommargin" style="" field="li_title__1531225412783" >ҚАРАҒАНДЫ</div> <div class="t-descr t-descr_sm" style="" field="li_descr__1531225412783" >Адрес:<br />пр. Н. Абдирова, 30А<br /><br /><br />Телефон:<br /><a href="tel:+77212903133" style="color: rgb(123, 195, 96); font-size: 16px;"><span style="color: rgb(27, 162, 189);"><span data-redactor-style="font-size: 18px;" style="font-size: 18px;">+7 (7212)90-31-33</span></span></a><br /><br />E-mail:<br />info@prozrenie.kz<br /></div> <div class="t850__btn-container t850__btn-container_topmargin"> <div class="t850__btntext-wrapper"> <div class="t850__btn-text t-btntext t-btntext_sm " style="color:#1ba2bd;font-family:Open Sans;font-weight:500;">Веб-сайтқа өту</div> </div> </div> </div> </div> </a></div> </div><div class="t850__row" > <div class="t850__col t-col t-col_4 t-align_left"> <a href="https://ooc.kz/" target=""> <div class="t850__inner-col" style="background-color:#ffffff; border-radius:5px; box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.10);"> <div class="t850__wrap"> <div class="t-name t-name_lg t850__bottommargin" style="" field="li_title__1531225426944" >ӨСКЕМЕН</div> <div class="t-descr t-descr_sm" style="" field="li_descr__1531225426944" >Адрес:<br />ул. Карла Либнехта 36/1<br /><br />Телефон:<br /><a href="tel:+77232252611" style="color: rgb(123, 195, 96); font-size: 16px;"><span style="font-size: 18px;"><span data-redactor-style="color: rgb(27, 162, 189);" style="color: rgb(27, 162, 189);">+7 (7232) 25-26-11</span></span></a><br /><br />E-mail:<br />oskemen@prozrenie.kz</div> <div class="t850__btn-container t850__btn-container_topmargin"> <div class="t850__btntext-wrapper"> <div class="t850__btn-text t-btntext t-btntext_sm " style="color:#1ba2bd;font-family:Open Sans;font-weight:500;">Веб-сайтқа өту</div> </div> </div> </div> </div> </a></div><div class="t850__col t-col t-col_4 t-align_left"> <div class="t850__inner-col" style="background-color:#ffffff; border-radius:5px; box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.10);"> <div class="t850__wrap"> <div class="t-name t-name_lg t850__bottommargin" style="" field="li_title__1531225439554" >СЕМЕЙ</div> <div class="t-descr t-descr_sm" style="" field="li_descr__1531225439554" >Адрес:<br />просп. Шакарима 122, Семей<br /><br />Телефон:<br /><span><a href="tel:+77222682626" data-redactor-tag="a" style="color: rgb(27, 162, 189) !important;">+7 (7222) 68-26-26<br /></a></span><br /><span style="font-size: 18px;">E-mail:<br />semey_klinika2014@mail.ru</span></div> <div class="t850__btn-container t850__btn-container_topmargin"> <div class="t850__btntext-wrapper"> <div class="t850__btn-text t-btntext t-btntext_sm " style="color:#1ba2bd;font-family:Open Sans;font-weight:500;">Веб-сайтқа өту</div> </div> </div> </div> </div> </div><div class="t850__col t-col t-col_4 t-align_left"> <a href="http://uko-prozrenie.kz/contact.php" target=""> <div class="t850__inner-col" style="background-color:#ffffff; border-radius:5px; box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.10);"> <div class="t850__wrap"> <div class="t-name t-name_lg t850__bottommargin" style="" field="li_title__1531225453311" >ШЫМКЕНТ</div> <div class="t-descr t-descr_sm" style="" field="li_descr__1531225453311" >Адрес:<br />проспект Кунаева 53<br /><br />Телефон:<br /><a href="tel:+77252607303" style="color: rgb(123, 195, 96); font-size: 16px;"><span style="font-size: 18px;"><span style="color: rgb(27, 162, 189);" data-redactor-style="color: rgb(27, 162, 189);">+7 (7252) 607-303</span></span><br /><br /></a>E-mail:<br />Prozrenie.shymkent@gmail.com<br /></div> <div class="t850__btn-container t850__btn-container_topmargin"> <div class="t850__btntext-wrapper"> <div class="t850__btn-text t-btntext t-btntext_sm " style="color:#1ba2bd;font-family:Open Sans;font-weight:500;">Веб-сайтқа өту</div> </div> </div> </div> </div> </a></div> </div></div></div><script type="text/javascript"> $(document).ready(function() { t850_init('160705296'); });</script></div><div id="rec160705297" class="r t-rec t-rec_pt_0 t-rec_pb_75" style="padding-top:0px;padding-bottom:75px;background-color:#f7f7f7; " data-animationappear="off" data-record-type="125" data-bg-color="#f7f7f7"><!-- T117 --><div class="t117"><div class="t-width t-width_12 t-margin_auto"><div class="t-map-lazyload t117_map" data-maplazy-load="false" style="background-color:rgb(229, 227, 223);"><div class="t-map" id="separateMap160705297" data-map-language="" data-map-x="22.280937" data-map-y="114.177528" data-map-zoom="10" data-map-title="Hong Kong" style="width:100%; height:590px;" ></div><script type="text/javascript"> var arMapMarkers160705297 = [ { title:"ул.Омарова, 10.( ЖК Медео)", descr:"", lat:"51.170796", lng:"71.437418", }, { title:"ул. Жамакаева 254В, в здании института хирургии Mediterra", descr:"", lat:"43.210242", lng:"76.950693", }, { title:"пр. Н. Абдирова, 30А", descr:"", lat:"49.806504", lng:"73.099634", }, { title:"ул. Карла Либнехта 36/1", descr:"", lat:"49.946116", lng:"82.616026", }, { title:"просп. Шакарима 122, Семей 070000", descr:"", lat:"50.423597", lng:"80.265989", }, { title:"проспект Кунаева 53", descr:"", lat:"42.33244", lng:"69.603211", }, ];
 $(document).ready(function() { t_map_lazyload_add_map(); $(window).bind('scroll', t_throttle(t_map_lazyload_add_map, 300)); function t_map_lazyload_add_map() { var windowHeight = $(window).height(); var scrollDiffHeigth = 700; var rec = $('#rec' + 160705297); var map = rec.find('.t-map-lazyload'); if (map.length != 0) { var blockTop = map.offset().top; if ($(window).scrollTop() > blockTop - windowHeight - scrollDiffHeigth) { if (map.attr('data-maplazy-load') == 'false') { map.attr('data-maplazy-load', 'true'); t_appendYandexMap("160705297","c5c07cac-1016-4fbb-a294-314b2c221b33"); } } } }
 });</script></div></div></div><script type="text/javascript"> var fireRefreshEventOnWindow = function () { var evt = document.createEvent("HTMLEvents"); evt.initEvent('resize', true, false); window.dispatchEvent(evt); }; $('.t117').bind('displayChanged',function(){ fireRefreshEventOnWindow(); });</script> </div><div id="rec160705298" class="r t-rec t-screenmin-640px" style=" " data-animationappear="off" data-record-type="207" data-screen-min="640px" ><!-- cover --><div class="t-cover" id="recorddiv160705298" bgimgfield="img" style="height:60vh; background-image:url('images/tild3062-6463-4562-a365-663264363236__-__resize__20x__frantsiia-marsel-mor.jpg');" ><div class="t-cover__carrier" id="coverCarry160705298" data-content-cover-id="160705298" data-content-cover-bg="images/tild3062-6463-4562-a365-663264363236__frantsiia-marsel-mor.jpg" data-content-cover-height="60vh" data-content-cover-parallax="fixed" style="height:60vh; "></div> <div class="t-cover__filter" style="height:60vh;background-image: -moz-linear-gradient(top, rgba(0,0,0,0.50), rgba(0,0,0,0.40));background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.50), rgba(0,0,0,0.40));background-image: -o-linear-gradient(top, rgba(0,0,0,0.50), rgba(0,0,0,0.40));background-image: -ms-linear-gradient(top, rgba(0,0,0,0.50), rgba(0,0,0,0.40));background-image: linear-gradient(top, rgba(0,0,0,0.50), rgba(0,0,0,0.40));filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#7f000000', endColorstr='#99000000');"></div><div class="t184"> <div class="t-container t-align_center"> <div class="t-col t-col_12"><div class="t-cover__wrapper t-valign_middle" style="height:60vh;"> <div class="t184__title t-title t-title_xxl" style="" field="title"><div style="font-size:26px;" data-customstyle="yes"><span style="font-weight: 300;">Суретке байланысты сұрақтарға қосымша жауаптар алу үшін, <br /> соның ішінде олардың жеке деректерін сақтауға және <br /> өңдеуге келісімін қайтарып алу үшін қатысушылар <br /> төмендегілерге хабарласуға құқылы: </span><br /></div></div> </div> <div class="t184__descr t-descr" style="" field="descr"><span style="font-weight: 600;">info@astanavision.com</span></div> </div> </div></div> </div> </div><div id="rec160705299" class="r t-rec t-screenmax-640px" style=" " data-animationappear="off" data-record-type="207" data-screen-max="640px" ><!-- cover --><div class="t-cover" id="recorddiv160705299" bgimgfield="img" style="height:100vh; background-image:url('images/tild3062-6463-4562-a365-663264363236__-__resize__20x__frantsiia-marsel-mor.jpg');" ><div class="t-cover__carrier" id="coverCarry160705299" data-content-cover-id="160705299" data-content-cover-bg="images/tild3062-6463-4562-a365-663264363236__frantsiia-marsel-mor.jpg" data-content-cover-height="100vh" data-content-cover-parallax="fixed" style="height:100vh; "></div> <div class="t-cover__filter" style="height:100vh;background-image: -moz-linear-gradient(top, rgba(0,0,0,0.50), rgba(0,0,0,0.40));background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.50), rgba(0,0,0,0.40));background-image: -o-linear-gradient(top, rgba(0,0,0,0.50), rgba(0,0,0,0.40));background-image: -ms-linear-gradient(top, rgba(0,0,0,0.50), rgba(0,0,0,0.40));background-image: linear-gradient(top, rgba(0,0,0,0.50), rgba(0,0,0,0.40));filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#7f000000', endColorstr='#99000000');"></div><div class="t184"> <div class="t-container t-align_center"> <div class="t-col t-col_12"><div class="t-cover__wrapper t-valign_middle" style="height:100vh;"> <div class="t184__title t-title t-title_xxl" style="" field="title"><div style="font-size:20px;" data-customstyle="yes"><span style="font-weight: 300;">Суретке байланысты сұрақтарға қосымша жауаптар алу үшін, <br /> соның ішінде олардың жеке деректерін сақтауға және <br /> өңдеуге келісімін қайтарып алу үшін қатысушылар <br /> төмендегілерге хабарласуға құқылы: </span><br /></div></div> </div> <div class="t184__descr t-descr" style="" field="descr"><div style="font-size:40px;" data-customstyle="yes"><span style="font-weight: 600;">info@astanavision.com</span></div></div> </div> </div></div> </div> </div></div><!--/allrecords--><!-- Tilda copyright. Don't remove this line --><!-- Stat --><!-- Google Tag Manager (noscript) --><noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-ND9HTM2" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript><!-- End Google Tag Manager (noscript) --><script type="text/javascript">if (! window.mainTracker) { window.mainTracker = 'tilda'; }	(function (d, w, k, o, g) { var n=d.getElementsByTagName(o)[0],s=d.createElement(o),f=function(){n.parentNode.insertBefore(s,n);}; s.type = "text/javascript"; s.async = true; s.key = k; s.id = "tildastatscript"; s.src=g; if (w.opera=="[object Opera]") {d.addEventListener("DOMContentLoaded", f, false);} else { f(); } })(document, window, 'f6d93e5b9426b0bec4afbb8f7783c7df','script','https://stat.tildacdn.com/js/tildastat-0.2.min.js');</script>
-  <style>
+</script>
+
+<style>
     #remember{
         margin-top: 10px;
     }
@@ -198,7 +200,24 @@ box-sizing: border-box;
 border-radius: 4px;
 background: #FFFFFF;
 border-radius: 4px;
+color:  #000 !important;
+ 
+ width: 220px;
+
+ background: transparent;
+ z-index: 0;
+border:none;
+
+ -webkit-user-select: none;
+-moz-user-select: -moz-none;
+-ms-user-select: none;
+user-select: none;
+
+-webkit-appearance: none;
+-moz-appearance: radio-container;
+appearance: none;
     }
+
 .background{
     background-color: rgba(53, 51, 51, 0.6) ;
     display: none;
@@ -405,35 +424,13 @@ background-color: white !important;
 }
 
 
-#select{
-    color:  #C4C4C4 !important;
- 
-    width: 220px;
-    /* padding-right: 20px; */
-    background: transparent;
-    z-index: 0;
-   border:none;
-
-    -webkit-user-select: none;
--moz-user-select: -moz-none;
--ms-user-select: none;
- user-select: none;
-
--webkit-appearance: none;
--moz-appearance: radio-container;
- appearance: none;
-
-}
-
-
-
 .selected_label{
-    /* padding-left: 8px; */
+   
     font-style: normal;
 font-weight: normal;
 font-size: 13px;
 line-height: 15px;
-margin-right: 20px;
+
 color: #60B6CC;
 }
 
@@ -473,20 +470,20 @@ font-size: 14px;
 }
 
 #norember_call__input{
- margin-top: 2px;
+ margin-top: 4px;
 border: none; 
 font-size: 14px;
 line-height: 16px;
 
 }
 
-@media(max-width: 600px){
+@media(max-width: 400px){
     .main{
-        width: 230px;
-     
+        width: 100vw;
+        
     margin: -140px 0 0 -115px;
     padding: 5px;
-    padding-left: 20px;
+     padding-left: 20px; 
 
     }
     .button{
@@ -591,6 +588,7 @@ line-height: 16px;
 }
 
         </style>
+
         <script>
             let remember = document.querySelector('#remember'),
                 noremember = document.querySelector('#noremember'),
