Исправлены баги с адаптивной версткой

--- a/kz/index.html
+++ b/kz/index.html
@@ -461,7 +461,7 @@ margin-bottom: 10px;
     display: flex;  
     align-items: center;
 background-color: white;
-width: 166px;
+width: 50%;
 margin-top: -13px;
 margin-left: 6px;
 line-height: 16px;
@@ -561,7 +561,7 @@ line-height: 16px;
     }
     .noremeber_call span{
         font-size: 8px;
-        width: 70px;
+        width: 50%;
     }
     #norember_call__input{
         font-size: 9px;
